Changes after 2.3.5 release:

- CPU
  - Added POPCNT instruction emulation (SSE4A and SSE4.2 instruction)
  - Implemented MTRR emulation, to enable use --enable-mtrr configure
    option
  - Many minor bugfixes in x86-64 CPU emulation
  - Many fixes in Bochs internal debugger and disassembler

- Configure and compile
  - rename configure option --enable-4meg-pages to --enable-large-pages.
    The option enables page size extensions (PSE) which refers to 2M pages
    as well.
  - removed -enable-save-restore configure option, save/restore feature 
    changed to be one the basic Bochs features and compiled by default 
    for all configurations.
  - added new Bochs benchmark mode. To run Bochs in benchmark mode execute
    it with new command line option 'bochs -benchmark time'. The emulation
    will be automatically stopped after 'time' millions of emulation 
    cycles is executed.

-------------------------------------------------------------------------
Changes in 2.3.5 (September 16, 2007):

Brief summary :
- Critical problems fixed for x86-64 support in CPU and Bochs internal debugger
- ACPI support
- The release compiled with x86-64 and ACPI
- Hard disk emulation supports ATA-6 (LBA48 addressing, UDMA modes)
- Added emulation of Intel SSE4.1 instruction set

Detailed change log :

- CPU
  - Fixed critical bug with 0x90 opcode (NOP) handling in x86-64 mode
  - implied stack references where the stack address is not in canonical form 
    should causes a stack exception (#SS)
  - Added emulation of SSE4.1 instruction set (Stanislav)
  - Do not save and restore XMM8-XMM15 registers when not in x86-64 mode
  - Fixed zero upper 32-bit part of GPR in x86-64 mode
  - CMOV_GdEd should zero upper 32-bit part of GPR register even if the
    'cmov' condition was false !
  - Implemented CLFLUSH instruction, report non-zero cache size in CPUID
  - Fixed PUSHA/POPA instructions behavior in real mode
  - Fixed detection of inexact result by FPU